Update: Skills に自己評価用の星を追加

--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -89,6 +89,11 @@
         font-size: 3rem;
       }
 
+      .card_star {
+        margin: 0 auto;
+        width: 80px;
+      }
+
       .card_list {
         display: flex;
         flex-flow: row wrap;
