Update: Skills にキャプションを追加

--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -94,6 +94,12 @@
         width: 80px;
       }
 
+      .card_caption {
+        font-size: .5rem;
+        color: #bbbbbb;
+        padding: 1rem;
+      }
+
       .card_list {
         display: flex;
         flex-flow: row wrap;
