--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -59,6 +59,11 @@
         padding: 0 0 0 2rem;
       }
 
+      .video {
+        width: 100%;
+        max-width: 400px;
+      }
+
       .space {
         height: .8rem;
       }
