--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -56,12 +56,12 @@
       }
 
       .description {
+        font-family: sans-serif;
         padding: 0 0 0 2rem;
       }
 
       .video {
         width: 100%;
-        max-width: 400px;
       }
 
       .space {
@@ -100,6 +100,7 @@
       }
 
       .card_caption {
+        font-family: sans-serif;
         font-size: .5rem;
         color: #bbbbbb;
         padding: 1rem;
