--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -139,6 +139,7 @@
           font-family: _font(family);
           border: none;
           box-shadow: none;
+          margin: 0 auto;
 
           &:hover,
           &:focus {
